WCPaperItem class small fix

--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj
@@ -168,7 +168,7 @@
     <ClCompile Include="StaticEntity.cpp" />
     <ClCompile Include="Thrall.cpp" />
     <ClCompile Include="GUIWindow.cpp" />
-    <ClCompile Include="WCPaperItem.cpp" />
+    <ClCompile Include="WCItem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -219,7 +219,7 @@
     <ClInclude Include="StaticEntity.h" />
     <ClInclude Include="Thrall.h" />
     <ClInclude Include="GUIWindow.h" />
-    <ClInclude Include="WCPaperItem.h" />
+    <ClInclude Include="WCItem.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GUIElem.cpp" />
